Muchos cambios en muchas clases que no pude comentar por alguna razon